# MinimalTodoApp

./: .gitignore  CLAUDE.md  README.md  handoff.md  index.html  package-lock.json  package.json  prompts.md  prompts_origin.md  release-notes.md  release.md  release.ps1  tsconfig.app.tsbuildinfo  交接文档.md  优化记录.md
.github/workflows/: sync-to-gitee.yml
MinimalTodoApp/: App.xaml  App.xaml.cs  HANDOFF-标签重构.md  MinimalTodoApp.csproj  README.md  release.md  优化记录.md  使用指南.txt
MinimalTodoApp/Converters/: Converters.cs
MinimalTodoApp/Infrastructure/: AcrylicHelper.cs  FontManager.cs  GroupIcons.cs  InlineMarkdown.cs  MarkdownFlowDocument.cs  NativeMethods.cs  NoteImageStore.cs  ThemeManager.cs  UpdateService.cs
MinimalTodoApp/Lang/: Strings.en.xaml  Strings.zh.xaml
MinimalTodoApp/Models/: AppData.cs  Note.cs  NoteGroup.cs  SortMode.cs  TodoGroup.cs  TodoItem.cs
MinimalTodoApp/Themes/: Clay.xaml  Controls.xaml  Dark.xaml  Dunhuang1.xaml  Dunhuang2.xaml  Fog.xaml  Forest.xaml  Glass.xaml  Graphite.xaml  Haze.xaml  Light.xaml  Macaron1.xaml  Macaron2.xaml  Macaron3.xaml  Nord.xaml  Oat.xaml  Ocean.xaml  Rose.xaml  Sage.xaml  Slate.xaml  Transparent.xaml
MinimalTodoApp/ViewModels/: MainViewModel.cs  NotesViewModel.cs  ThemeGroupVm.cs
MinimalTodoApp/Views/: CalendarDialog.xaml  CalendarDialog.xaml.cs  CalendarView.xaml  CalendarView.xaml.cs  HelpDialog.xaml  HelpDialog.xaml.cs  IconPickerDialog.xaml  IconPickerDialog.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NotesView.xaml  NotesView.xaml.cs  SettingsDialog.xaml  SettingsDialog.xaml.cs  TaskEditDialog.xaml  TaskEditDialog.xaml.cs  ThemeEditorDialog.xaml  ThemeEditorDialog.xaml.cs  ThemePickerWindow.xaml  ThemePickerWindow.xaml.cs  ToastWindow.xaml  ToastWindow.xaml.cs  UpdateDialog.xaml  UpdateDialog.xaml.cs
scripts/: convert-legacy-assets.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  commands.rs  database.rs  import.rs  lib.rs  models.rs  updater.rs  window.rs
src/components/: CalendarPanel.tsx  DuePicker.tsx  NoteEditor.tsx  NotesTree.tsx  QuickAdd.tsx  ReminderPicker.tsx  ResizeBorders.tsx  SchedulePanel.tsx  SettingsWindow.tsx  Sidebar.tsx  TagSidebar.tsx  TaskItem.tsx  TaskList.tsx  TitleBar.tsx
src/hooks/: useSortableItem.ts
src/i18n/: en.json  zh.json
src/lib/: date.ts  effects.ts  font.ts  i18n.ts  markdown.ts  markdownIO.ts  notesExport.ts  notify.ts  quadrant.ts  sort.ts  tauri-ipc.ts  themes-builtin.json  themes.ts  (+1 more)
(+21 files in other folders)
